--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bollard = "0.17.0"
+flate2 = "1.0.31"
+futures-util = "0.3.30"
 glob = "0.3.1"
 remove_empty_subdirs = "0.1.1"
+tar = "0.4.41"
+tokio = { version = "1.39.2", features = ["full"] }
 
 [[bin]]
 name = "cli"
