--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bollard = "0.17.0"
 clap = { version = "4.5.16", features = ["derive", "env", "string"] }
+dirs = "5.0.1"
 flate2 = "1.0.31"
 futures-util = "0.3.30"
 glob = "0.3.1"
