--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Test
+        run: cargo test
+
       - name: Build
         run: cargo build
 
