--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install deps
+        run: sudo apt-get update && sudo apt-get install -y musl-tools musl-dev
+
       - name: Build binary
         uses: houseabsolute/actions-rust-cross@v0
         with:
