--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,18 +6,27 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install Rust
+        uses:  actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+
+      - name: Test
+        run: cargo test
+  build:
+    needs: test
     strategy:
       matrix:
         platform:
           - target: aarch64-unknown-linux-musl
-            command: both
-
           - target: i686-unknown-linux-musl
-            command: both
-
           - target: x86_64-unknown-linux-musl
-            command: both
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -26,10 +35,13 @@ jobs:
       - name: Install deps
         run: sudo apt-get update && sudo apt-get install -y musl-tools musl-dev
 
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Build binary
         uses: houseabsolute/actions-rust-cross@v0
         with:
-          command: ${{ matrix.platform.command }}
+          command: build
           target: ${{ matrix.platform.target }}
           args: "--locked --release"
           strip: true
@@ -42,7 +54,7 @@ jobs:
           retention-days: 1
   docker_image:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
