--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,12 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install Rust
         uses:  actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
+
+      - name: Cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Test
         run: cargo test
@@ -30,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install deps
         run: sudo apt-get update && sudo apt-get install -y musl-tools musl-dev
@@ -50,21 +53,21 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cli-${{ matrix.platform.target }}
-          path: ./target/${{ matrix.platform.target }}/release/cli ./cli
+          path: ./target/${{ matrix.platform.target }}/release/cli
           retention-days: 1
   docker_image:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Download artifactrs
         uses: actions/download-artifact@v4
       - name: Build and publish image
         uses: ilteoood/docker_buildx@master
         with:
           tag: latest
-          platform: linux/amd64,linux/arm64
+          platform: linux/amd64,linux/arm64,linux/386
           imageName: ilteoood/nmt
           publish: true
           dockerUser: ilteoood
