--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tar = "0.4.41"
 tokio = { version = "1.39.2", features = ["full"] }
 
 [dev-dependencies]
+assert_fs = "1.1.2"
 serial_test = "*"
 
 [[bin]]
