--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,14 +35,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install deps
-        run: sudo apt-get update && sudo apt-get install -y musl-tools musl-dev
-
       - name: Cache
         uses: Swatinem/rust-cache@v2
 
       - name: Build binary
-        uses: houseabsolute/actions-rust-cross@v0
+        uses: houseabsolute/actions-rust-cross@musl
         with:
           command: build
           target: ${{ matrix.platform.target }}
