--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,24 +6,7 @@ on:
       - main
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses:  actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          toolchain: stable
-
-      - name: Cache
-        uses: Swatinem/rust-cache@v2
-
-      - name: Test
-        run: cargo test
   build:
-    needs: test
     strategy:
       matrix:
         platform:
@@ -41,10 +24,12 @@ jobs:
       - name: Build binary
         uses: houseabsolute/actions-rust-cross@v0
         with:
-          command: build
+          command: both
           target: ${{ matrix.platform.target }}
           args: "--locked --release"
           strip: true
+        env:
+          CROSS_CONTAINER_OPTS: "--mount=/var/run/docker.sock:/var/run/docker.sock"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
