--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Cache
         uses: Swatinem/rust-cache@v2
 
-      - name: Build binary
+      - name: Build and test binary
         uses: houseabsolute/actions-rust-cross@v0
         with:
           command: both
