feat: retrieve specifiers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ dirs = "5.0.1"
 flate2 = "1.0.31"
 futures-util = "0.3.30"
 glob = "0.3.1"
+oxc_allocator = "0.29.0"
+oxc_ast = "0.29.0"
+oxc_parser = "0.29.0"
+oxc_resolver = "1.11.0"
+oxc_span = "0.29.0"
 remove_empty_subdirs = "0.1.1"
 swc = "0.284.1"
 swc_common = "0.37.4"
