--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,12 +19,7 @@
                     "kind": "bin"
                 }
             },
-            "args": [
-                "--project-root-location",
-                "/Users/ilteoood/Documents/git/personal/node-red",
-                "--entry-point-location",
-                "/Users/ilteoood/Documents/git/personal/node-red/packages/node_modules/node-red/red.js"
-            ],
+            "args": [],
             "cwd": "${workspaceFolder}"
         },
         {
