--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ oxc_resolver = "1.12.0"
 oxc_span = "0.30.5"
 remove_empty_subdirs = "0.1.1"
 serde_json = "1.0.128"
+strum = { version = "0.26.3", features = ["derive"] }
 tar = "0.4.42"
 tokio = { version = "1.40.0", features = ["full"] }
 
